@@ -35,14 +35,12 @@ import org.jamwiki.utils.WikiLogger;
 public class WikiLinkTag {
 
 	private static final WikiLogger logger = WikiLogger.getLogger(WikiLinkTag.class.getName());
-	private static Pattern WIKI_LINK_PATTERN = null;
 	private static Pattern IMAGE_SIZE_PATTERN = null;
 	// FIXME - make configurable
 	private static final int DEFAULT_THUMBNAIL_SIZE = 180;
 
 	static {
 		try {
-			WIKI_LINK_PATTERN = Pattern.compile("\\[\\[[ ]*(\\:[ ]*)?[ ]*([^\\n\\r\\|]+)([ ]*\\|[ ]*([^\\n\\r]+))?[ ]*\\]\\]([a-z]*)");
 			// look for image size info in image tags
 			IMAGE_SIZE_PATTERN = Pattern.compile("([0-9]+)[ ]*px", Pattern.CASE_INSENSITIVE);
 		} catch (Exception e) {
@@ -57,7 +55,7 @@ public class WikiLinkTag {
 		String context = parserInput.getContext();
 		String virtualWiki = parserInput.getVirtualWiki();
 		try {
-			WikiLink wikiLink = this.parseWikiLink(raw);
+			WikiLink wikiLink = JFlexParserUtil.parseWikiLink(raw);
 			if (wikiLink == null) {
 				// invalid link
 				return raw;
@@ -171,40 +169,10 @@ public class WikiLinkTag {
 	}
 
 	/**
-	 * Parse a raw Wiki link of the form "[[link|text]]", and return a WikiLink
-	 * object representing the link.
-	 *
-	 * @param raw The raw Wiki link text.
-	 * @return A WikiLink object that represents the link.
-	 */
-	private WikiLink parseWikiLink(String raw) {
-		if (StringUtils.isBlank(raw)) {
-			return new WikiLink();
-		}
-		Matcher m = WIKI_LINK_PATTERN.matcher(raw.trim());
-		if (!m.matches()) {
-			return new WikiLink();
-		}
-		String url = m.group(2);
-		WikiLink wikiLink = LinkUtil.parseWikiLink(url);
-		wikiLink.setColon((m.group(1) != null));
-		wikiLink.setText(m.group(4));
-		String suffix = m.group(5);
-		if (!StringUtils.isBlank(suffix)) {
-			if (StringUtils.isBlank(wikiLink.getText())) {
-				wikiLink.setText(wikiLink.getDestination() + suffix);
-			} else {
-				wikiLink.setText(wikiLink.getText() + suffix);
-			}
-		}
-		return wikiLink;
-	}
-
-	/**
 	 *
 	 */
 	private String processLinkContent(ParserInput parserInput, ParserOutput parserOutput, int mode, String raw) {
-		WikiLink wikiLink = this.parseWikiLink(raw);
+		WikiLink wikiLink = JFlexParserUtil.parseWikiLink(raw);
 		if (StringUtils.isBlank(wikiLink.getDestination()) && StringUtils.isBlank(wikiLink.getSection())) {
 			// no destination or section
 			return raw;
@@ -220,7 +188,7 @@ public class WikiLinkTag {
 	 *
 	 */
 	private void processLinkMetadata(ParserOutput parserOutput, String raw) {
-		WikiLink wikiLink = this.parseWikiLink(raw);
+		WikiLink wikiLink = JFlexParserUtil.parseWikiLink(raw);
 		if (StringUtils.isBlank(wikiLink.getDestination()) && StringUtils.isBlank(wikiLink.getSection())) {
 			return;
 		}
